# note_api

./: .gitignore  README.md  pyproject.toml  run_app.sh
src/: .env.example  alembic.ini  main.py
src/database/: __init__.py  connect_to_db.py  env.py  events.py
src/database/dependencies/: __init__.py  authentication.py  database.py
src/database/dependencies/errors/: __init__.py  invalid_token.py
src/database/models/: __init__.py  notes.py  users.py
src/database/repositories/: __init__.py  base_repository.py  note_repository.py  user_repository.py
src/database/repositories/errors/: __init__.py  entity_already_exist.py  entity_does_not_exist.py  failed_credentials.py  parameters_not_specified.py  validation_error.py
src/database/versions/: 2357badad827_change_user_id_column.py  43d6ac796886_add_users_table.py  d63d5da1cebb_add_notes_table.py
src/helpers/: __init__.py  check_email.py
src/helpers/errors/: __init__.py  invalid_email.py
src/resources/: __init__.py  constants.py  mysql_connection_string.py
src/routers/: authentication.py  notes.py
src/schemas/: __init__.py  note_in_create.py  note_in_update.py  user_in_create.py  user_in_db.py  user_in_login.py
src/services/: __init__.py  jwt.py  security.py
