[tool.poetry]
name = "note_api"
version = "0.1.0"
description = ""
authors = ["CartoonM"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
sqlalchemy = "^1.3.19"
pymysql = "^0.10.0"
alembic = "^1.4.2"
databases = "^0.3.2"
python-dotenv = "^0.14.0"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
